
[TestParsePatternNoErrors/BooleanLiteralFalse - 1]
&ast.LitPat{
    Lit:  &ast.BoolLit{},
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:6},
        SourceID: 1,
    },
    inferredType: nil,
}
---

[TestParsePatternNoErrors/StringLiteral - 1]
&ast.LitPat{
    Lit: &ast.StrLit{
        Value: "hello",
        span:  ast.Span{},
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:8},
        SourceID: 1,
    },
    inferredType: nil,
}
---

[TestParsePatternNoErrors/TuplePatternWithRest - 1]
&ast.TuplePat{
    Elems: {
        &ast.IdentPat{
            Name:    "a",
            Default: nil,
            span:    ast.Span{
                Start:    ast.Location{Line:1, Column:2},
                End:      ast.Location{Line:1, Column:3},
                SourceID: 1,
            },
            inferredType: nil,
        },
        &ast.IdentPat{
            Name:    "b",
            Default: &ast.LiteralExpr{
                Lit: &ast.NumLit{
                    Value: 5,
                    span:  ast.Span{
                        Start:    ast.Location{Line:1, Column:9},
                        End:      ast.Location{Line:1, Column:10},
                        SourceID: 1,
                    },
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:9},
                    End:      ast.Location{Line:1, Column:10},
                    SourceID: 1,
                },
                inferredType: nil,
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:5},
                End:      ast.Location{Line:1, Column:10},
                SourceID: 0,
            },
            inferredType: nil,
        },
        &ast.RestPat{
            Pattern: &ast.IdentPat{
                Name:    "rest",
                Default: nil,
                span:    ast.Span{
                    Start:    ast.Location{Line:1, Column:15},
                    End:      ast.Location{Line:1, Column:19},
                    SourceID: 1,
                },
                inferredType: nil,
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:12},
                End:      ast.Location{Line:1, Column:19},
                SourceID: 0,
            },
            inferredType: nil,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:20},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParsePatternNoErrors/Identifier - 1]
&ast.IdentPat{
    Name:    "x",
    Default: nil,
    span:    ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:2},
        SourceID: 1,
    },
    inferredType: nil,
}
---

[TestParsePatternNoErrors/ExtractPattern - 1]
&ast.ExtractorPat{
    Name: "Foo",
    Args: {
        &ast.IdentPat{
            Name:    "a",
            Default: nil,
            span:    ast.Span{
                Start:    ast.Location{Line:1, Column:5},
                End:      ast.Location{Line:1, Column:6},
                SourceID: 1,
            },
            inferredType: nil,
        },
        &ast.IdentPat{
            Name:    "b",
            Default: nil,
            span:    ast.Span{
                Start:    ast.Location{Line:1, Column:8},
                End:      ast.Location{Line:1, Column:9},
                SourceID: 1,
            },
            inferredType: nil,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:10},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParsePatternNoErrors/BooleanLiteralTrue - 1]
&ast.LitPat{
    Lit: &ast.BoolLit{
        Value: true,
        span:  ast.Span{},
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:5},
        SourceID: 1,
    },
    inferredType: nil,
}
---

[TestParsePatternNoErrors/NullLiteral - 1]
&ast.LitPat{
    Lit:  &ast.NullLit{},
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:5},
        SourceID: 1,
    },
    inferredType: nil,
}
---

[TestParsePatternNoErrors/NumberLiteral - 1]
&ast.LitPat{
    Lit: &ast.NumLit{
        Value: 5,
        span:  ast.Span{},
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:2},
        SourceID: 1,
    },
    inferredType: nil,
}
---

[TestParsePatternNoErrors/Wildcard - 1]
&ast.WildcardPat{
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:2},
        SourceID: 1,
    },
    inferredType: nil,
}
---

[TestParsePatternNoErrors/UndefinedLiteral - 1]
&ast.LitPat{
    Lit:  &ast.UndefinedLit{},
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:10},
        SourceID: 1,
    },
    inferredType: nil,
}
---

[TestParsePatternNoErrors/ObjectPatternWithRest - 1]
&ast.ObjectPat{
    Elems: {
        &ast.ObjShorthandPat{
            Key: &ast.Ident{
                Name: "a",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:2},
                    End:      ast.Location{Line:1, Column:3},
                    SourceID: 1,
                },
            },
            Default: nil,
            span:    ast.Span{
                Start:    ast.Location{Line:1, Column:2},
                End:      ast.Location{Line:1, Column:3},
                SourceID: 1,
            },
        },
        &ast.ObjKeyValuePat{
            Key: &ast.Ident{
                Name: "b",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:5},
                    End:      ast.Location{Line:1, Column:6},
                    SourceID: 1,
                },
            },
            Value: &ast.IdentPat{
                Name:    "c",
                Default: nil,
                span:    ast.Span{
                    Start:    ast.Location{Line:1, Column:8},
                    End:      ast.Location{Line:1, Column:9},
                    SourceID: 1,
                },
                inferredType: nil,
            },
            Default: nil,
            span:    ast.Span{
                Start:    ast.Location{Line:1, Column:5},
                End:      ast.Location{Line:1, Column:9},
                SourceID: 0,
            },
            inferredType: nil,
        },
        &ast.ObjRestPat{
            Pattern: &ast.IdentPat{
                Name:    "rest",
                Default: nil,
                span:    ast.Span{
                    Start:    ast.Location{Line:1, Column:14},
                    End:      ast.Location{Line:1, Column:18},
                    SourceID: 1,
                },
                inferredType: nil,
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:11},
                End:      ast.Location{Line:1, Column:18},
                SourceID: 0,
            },
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:19},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParsePatternNoErrors/ObjectPatternWithDefaults - 1]
&ast.ObjectPat{
    Elems: {
        &ast.ObjShorthandPat{
            Key: &ast.Ident{
                Name: "a",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:2},
                    End:      ast.Location{Line:1, Column:3},
                    SourceID: 1,
                },
            },
            Default: &ast.LiteralExpr{
                Lit: &ast.NumLit{
                    Value: 5,
                    span:  ast.Span{
                        Start:    ast.Location{Line:1, Column:6},
                        End:      ast.Location{Line:1, Column:7},
                        SourceID: 1,
                    },
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:6},
                    End:      ast.Location{Line:1, Column:7},
                    SourceID: 1,
                },
                inferredType: nil,
            },
            span: ast.Span{
                Start:    ast.Location{Line:1, Column:2},
                End:      ast.Location{Line:1, Column:7},
                SourceID: 0,
            },
        },
        &ast.ObjKeyValuePat{
            Key: &ast.Ident{
                Name: "b",
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:9},
                    End:      ast.Location{Line:1, Column:10},
                    SourceID: 1,
                },
            },
            Value: &ast.IdentPat{
                Name:    "c",
                Default: &ast.LiteralExpr{
                    Lit: &ast.StrLit{
                        Value: "hello",
                        span:  ast.Span{
                            Start:    ast.Location{Line:1, Column:16},
                            End:      ast.Location{Line:1, Column:23},
                            SourceID: 1,
                        },
                    },
                    span: ast.Span{
                        Start:    ast.Location{Line:1, Column:16},
                        End:      ast.Location{Line:1, Column:23},
                        SourceID: 1,
                    },
                    inferredType: nil,
                },
                span: ast.Span{
                    Start:    ast.Location{Line:1, Column:12},
                    End:      ast.Location{Line:1, Column:23},
                    SourceID: 0,
                },
                inferredType: nil,
            },
            Default: nil,
            span:    ast.Span{
                Start:    ast.Location{Line:1, Column:9},
                End:      ast.Location{Line:1, Column:23},
                SourceID: 0,
            },
            inferredType: nil,
        },
    },
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:24},
        SourceID: 0,
    },
    inferredType: nil,
}
---

[TestParsePatternNoErrors/WildcardPattern - 1]
&ast.WildcardPat{
    span: ast.Span{
        Start:    ast.Location{Line:1, Column:1},
        End:      ast.Location{Line:1, Column:2},
        SourceID: 1,
    },
    inferredType: nil,
}
---
